--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,5 +23,5 @@
 
 <nav>
   <a href="/portfolio/index.html">Home</a> |
-  <a href="/portfolio/schedule.md">Course Schedule & Project List</a>
+  <a href="/portfolio/schedule">Course Schedule & Project List</a>
 </nav>
